Fix (modal.js) Jumping when modal windows opened

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -26,6 +26,7 @@ body {
   font-weight: 400;
   font-style: normal;
   color: #000000;
+  background-color: #F1F1F1;
 }
 
 .status {
@@ -72,6 +73,7 @@ textarea:focus {
 }
 
 .form_input {
+  box-sizing: border-box;
   height: 5.8rem;
   padding: 0;
   margin-bottom: 2rem;
